# algor

./: Cargo.toml  README.md
src/: font.rs  lib.rs  main.rs  style.rs
src/backend/: compiler.rs  config.rs  lesson_parser.rs  lessons.rs  tests.rs  virtual_machine.rs
src/backend/compiler/: generator.rs  lexer.rs  parser.rs  tests.rs  utils.rs
src/backend/lessons/resources/: test.xml
src/frontend/: app.rs  font.rs  message.rs  pane.rs  screen.rs  style.rs  theme.rs  widgets.rs
src/frontend/components/: menu.rs  sandbox.rs  settings.rs
src/frontend/handlers/: messages.rs  subscriptions.rs
src/frontend/pane/: editor.rs  state_viewer.rs  terminal.rs
src/frontend/screen/: lesson_select.rs  lesson_view.rs  menu.rs  sandbox.rs  settings.rs
src/frontend/util/: font.rs  style.rs  theme.rs  widgets.rs
src/frontend/utils/: font.rs  style.rs  theme.rs
src/shared/: runtime.rs  vm.rs
