[package]
name = "algor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
rfd = "0.15.3"
toml = "0.8.22"
serde = "1.0.219"

[dependencies.iced]
version = "0.13.1"
features = ["advanced", "tokio"]

[dependencies.iced_aw]
version = "0.12.2"
default-features = false
features = ["number_input", "quad"]
