[package]
name = "algor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
rfd = "0.15.3"
toml = "0.8.22"
xml ="1.0"
serde = "1.0.219"
iced_futures = "0.13.2"

[dependencies.iced]
version = "0.14.0"
features = ["highlighter", "advanced", "tokio"]

[dependencies.iced_aw]
version = "0.13.0"
default-features = false
features = ["number_input", "quad"]
